--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -29,8 +29,8 @@
    <string>CEGUI Unified Editor</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>../data/icons/ceed.png</normaloff>../data/icons/ceed.png</iconset>
+   <iconset resource="../data/Resources.qrc">
+    <normaloff>:/icons/ceed.png</normaloff>:/icons/ceed.png</iconset>
   </property>
   <property name="windowOpacity">
    <double>1.000000000000000</double>
@@ -101,6 +101,10 @@
     <widget class="QMenu" name="menu_New">
      <property name="title">
       <string>&amp;New</string>
+     </property>
+     <property name="icon">
+      <iconset resource="../data/Resources.qrc">
+       <normaloff>:/icons/actions/new_file.png</normaloff>:/icons/actions/new_file.png</iconset>
      </property>
      <addaction name="actionNewLayout"/>
      <addaction name="actionNewImageset"/>
@@ -198,8 +202,8 @@
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionAbout">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/help_about.png</normaloff>../data/icons/actions/help_about.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/help_about.png</normaloff>:/icons/actions/help_about.png</iconset>
    </property>
    <property name="text">
     <string>About</string>
@@ -212,8 +216,8 @@
   </action>
   <action name="actionCloseOtherTabs">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/close_other_tabs.png</normaloff>../data/icons/actions/close_other_tabs.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/close_other_tabs.png</normaloff>:/icons/actions/close_other_tabs.png</iconset>
    </property>
    <property name="text">
     <string>Close Other</string>
@@ -221,8 +225,8 @@
   </action>
   <action name="actionCloseAllTabs">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/close_all_tabs.png</normaloff>../data/icons/actions/close_all_tabs.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/close_all_tabs.png</normaloff>:/icons/actions/close_all_tabs.png</iconset>
    </property>
    <property name="text">
     <string>Close All</string>
@@ -255,8 +259,8 @@
   </action>
   <action name="actionOpenFile">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/open_file.png</normaloff>../data/icons/actions/open_file.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/open_file.png</normaloff>:/icons/actions/open_file.png</iconset>
    </property>
    <property name="text">
     <string>Open File</string>
@@ -264,8 +268,8 @@
   </action>
   <action name="actionOpenProject">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/open_project.png</normaloff>../data/icons/actions/open_project.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/open_project.png</normaloff>:/icons/actions/open_project.png</iconset>
    </property>
    <property name="text">
     <string>Open Project</string>
@@ -273,8 +277,8 @@
   </action>
   <action name="actionCloseProject">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/close_project.png</normaloff>../data/icons/actions/close_project.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/close_project.png</normaloff>:/icons/actions/close_project.png</iconset>
    </property>
    <property name="text">
     <string>Close Project</string>
@@ -282,8 +286,8 @@
   </action>
   <action name="actionQuit">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/quit.png</normaloff>../data/icons/actions/quit.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/quit.png</normaloff>:/icons/actions/quit.png</iconset>
    </property>
    <property name="text">
     <string>Quit</string>
@@ -291,8 +295,8 @@
   </action>
   <action name="actionCloseTab">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/close_tab.png</normaloff>../data/icons/actions/close_tab.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/close_tab.png</normaloff>:/icons/actions/close_tab.png</iconset>
    </property>
    <property name="text">
     <string>Close</string>
@@ -300,8 +304,8 @@
   </action>
   <action name="actionSave">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/save.png</normaloff>../data/icons/actions/save.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/save.png</normaloff>:/icons/actions/save.png</iconset>
    </property>
    <property name="text">
     <string>Save</string>
@@ -309,8 +313,8 @@
   </action>
   <action name="actionSave_as">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/save_as.png</normaloff>../data/icons/actions/save_as.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/save_as.png</normaloff>:/icons/actions/save_as.png</iconset>
    </property>
    <property name="text">
     <string>Save As...</string>
@@ -318,8 +322,8 @@
   </action>
   <action name="actionSave_all">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/save_all.png</normaloff>../data/icons/actions/save_all.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/save_all.png</normaloff>:/icons/actions/save_all.png</iconset>
    </property>
    <property name="text">
     <string>Save All</string>
@@ -327,8 +331,8 @@
   </action>
   <action name="actionSave_project">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/save_project.png</normaloff>../data/icons/actions/save_project.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/save_project.png</normaloff>:/icons/actions/save_project.png</iconset>
    </property>
    <property name="text">
     <string>Save Project</string>
@@ -362,8 +366,8 @@
   </action>
   <action name="actionZoom_In">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/zoom_in.png</normaloff>../data/icons/actions/zoom_in.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/zoom_in.png</normaloff>:/icons/actions/zoom_in.png</iconset>
    </property>
    <property name="text">
     <string>Zoom In</string>
@@ -371,8 +375,8 @@
   </action>
   <action name="actionZoom_Out">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/zoom_out.png</normaloff>../data/icons/actions/zoom_out.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/zoom_out.png</normaloff>:/icons/actions/zoom_out.png</iconset>
    </property>
    <property name="text">
     <string>Zoom Out</string>
@@ -380,8 +384,8 @@
   </action>
   <action name="actionNormal_size">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/zoom_original.png</normaloff>../data/icons/actions/zoom_original.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/zoom_original.png</normaloff>:/icons/actions/zoom_original.png</iconset>
    </property>
    <property name="text">
     <string>Normal Size</string>
@@ -389,8 +393,8 @@
   </action>
   <action name="actionFullScreen">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/view_fullscreen.png</normaloff>../data/icons/actions/view_fullscreen.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/view_fullscreen.png</normaloff>:/icons/actions/view_fullscreen.png</iconset>
    </property>
    <property name="text">
     <string>Full Screen</string>
@@ -401,8 +405,8 @@
   </action>
   <action name="actionUndo">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/undo.png</normaloff>../data/icons/actions/undo.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/undo.png</normaloff>:/icons/actions/undo.png</iconset>
    </property>
    <property name="text">
     <string>Undo</string>
@@ -410,8 +414,8 @@
   </action>
   <action name="actionRedo">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/redo.png</normaloff>../data/icons/actions/redo.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/redo.png</normaloff>:/icons/actions/redo.png</iconset>
    </property>
    <property name="text">
     <string>Redo</string>
@@ -424,8 +428,8 @@
   </action>
   <action name="actionCut">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/cut.png</normaloff>../data/icons/actions/cut.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/cut.png</normaloff>:/icons/actions/cut.png</iconset>
    </property>
    <property name="text">
     <string>Cut</string>
@@ -433,8 +437,8 @@
   </action>
   <action name="actionCopy">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/copy.png</normaloff>../data/icons/actions/copy.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/copy.png</normaloff>:/icons/actions/copy.png</iconset>
    </property>
    <property name="text">
     <string>Copy</string>
@@ -442,8 +446,8 @@
   </action>
   <action name="actionPaste">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/paste.png</normaloff>../data/icons/actions/paste.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/paste.png</normaloff>:/icons/actions/paste.png</iconset>
    </property>
    <property name="text">
     <string>Paste</string>
@@ -451,8 +455,8 @@
   </action>
   <action name="actionDelete">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/delete.png</normaloff>../data/icons/actions/delete.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/delete.png</normaloff>:/icons/actions/delete.png</iconset>
    </property>
    <property name="text">
     <string>Delete</string>
@@ -460,8 +464,8 @@
   </action>
   <action name="actionPreferences">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/application_settings.png</normaloff>../data/icons/actions/application_settings.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/application_settings.png</normaloff>:/icons/actions/application_settings.png</iconset>
    </property>
    <property name="text">
     <string>Preferences</string>
@@ -485,8 +489,8 @@
   </action>
   <action name="actionReload_Resources">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/project_management/reload_resources.png</normaloff>../data/icons/project_management/reload_resources.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/project_management/reload_resources.png</normaloff>:/icons/project_management/reload_resources.png</iconset>
    </property>
    <property name="text">
     <string>Reload Resources</string>
@@ -494,8 +498,8 @@
   </action>
   <action name="actionSettings">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/project_settings.png</normaloff>../data/icons/actions/project_settings.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/project_settings.png</normaloff>:/icons/actions/project_settings.png</iconset>
    </property>
    <property name="text">
     <string>Settings</string>
@@ -503,8 +507,8 @@
   </action>
   <action name="actionQuickstartGuide">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/help_quickstart.png</normaloff>../data/icons/actions/help_quickstart.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/help_quickstart.png</normaloff>:/icons/actions/help_quickstart.png</iconset>
    </property>
    <property name="text">
     <string>Quickstart Guide</string>
@@ -512,8 +516,8 @@
   </action>
   <action name="actionUserManual">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/help_user_manual.png</normaloff>../data/icons/actions/help_user_manual.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/help_user_manual.png</normaloff>:/icons/actions/help_user_manual.png</iconset>
    </property>
    <property name="text">
     <string>User Manual</string>
@@ -521,8 +525,8 @@
   </action>
   <action name="actionWikiPage">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/help_wiki_page.png</normaloff>../data/icons/actions/help_wiki_page.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/help_wiki_page.png</normaloff>:/icons/actions/help_wiki_page.png</iconset>
    </property>
    <property name="text">
     <string>Wiki Page</string>
@@ -530,8 +534,8 @@
   </action>
   <action name="actionSendFeedback">
    <property name="icon">
-    <iconset>
-     <normaloff>../data/icons/actions/help_feedback.png</normaloff>../data/icons/actions/help_feedback.png</iconset>
+    <iconset resource="../data/Resources.qrc">
+     <normaloff>:/icons/actions/help_feedback.png</normaloff>:/icons/actions/help_feedback.png</iconset>
    </property>
    <property name="text">
     <string>Send Feedback</string>
@@ -548,6 +552,8 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../data/Resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
