--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -120,12 +120,12 @@
     <addaction name="actionCloseProject"/>
     <addaction name="separator"/>
     <addaction name="actionSave"/>
-    <addaction name="actionSave_as"/>
-    <addaction name="actionSave_all"/>
-    <addaction name="actionSave_project"/>
+    <addaction name="actionSaveAs"/>
+    <addaction name="actionSaveAll"/>
+    <addaction name="actionSaveProject"/>
     <addaction name="separator"/>
-    <addaction name="actionRecent_files"/>
-    <addaction name="actionRecent_projects"/>
+    <addaction name="actionRecentFiles"/>
+    <addaction name="actionRecentProjects"/>
     <addaction name="separator"/>
     <addaction name="actionQuit"/>
    </widget>
@@ -165,12 +165,12 @@
     <property name="title">
      <string>&amp;View</string>
     </property>
-    <addaction name="action_Docks_Toolbars"/>
+    <addaction name="actionDocksToolbars"/>
     <addaction name="actionStatusbar"/>
     <addaction name="separator"/>
-    <addaction name="actionZoom_In"/>
-    <addaction name="actionZoom_Out"/>
-    <addaction name="actionNormal_size"/>
+    <addaction name="actionZoomIn"/>
+    <addaction name="actionZoomOut"/>
+    <addaction name="actionNormalSize"/>
     <addaction name="separator"/>
     <addaction name="actionFullScreen"/>
    </widget>
@@ -178,16 +178,16 @@
     <property name="title">
      <string>Project</string>
     </property>
-    <addaction name="actionReload_Resources"/>
+    <addaction name="actionReloadResources"/>
     <addaction name="separator"/>
-    <addaction name="actionSettings"/>
+    <addaction name="actionProjectSettings"/>
    </widget>
    <widget class="QMenu" name="menuTabs">
     <property name="title">
      <string>Tabs</string>
     </property>
-    <addaction name="actionPrevious_Tab"/>
-    <addaction name="actionNext_Tab"/>
+    <addaction name="actionPreviousTab"/>
+    <addaction name="actionNextTab"/>
     <addaction name="separator"/>
     <addaction name="actionCloseOtherTabs"/>
     <addaction name="actionCloseAllTabs"/>
@@ -311,7 +311,7 @@
     <string>Save</string>
    </property>
   </action>
-  <action name="actionSave_as">
+  <action name="actionSaveAs">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
      <normaloff>:/icons/actions/save_as.png</normaloff>:/icons/actions/save_as.png</iconset>
@@ -320,7 +320,7 @@
     <string>Save As...</string>
    </property>
   </action>
-  <action name="actionSave_all">
+  <action name="actionSaveAll">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
      <normaloff>:/icons/actions/save_all.png</normaloff>:/icons/actions/save_all.png</iconset>
@@ -329,7 +329,7 @@
     <string>Save All</string>
    </property>
   </action>
-  <action name="actionSave_project">
+  <action name="actionSaveProject">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
      <normaloff>:/icons/actions/save_project.png</normaloff>:/icons/actions/save_project.png</iconset>
@@ -338,17 +338,17 @@
     <string>Save Project</string>
    </property>
   </action>
-  <action name="actionRecent_files">
+  <action name="actionRecentFiles">
    <property name="text">
     <string>Recent Files</string>
    </property>
   </action>
-  <action name="actionRecent_projects">
+  <action name="actionRecentProjects">
    <property name="text">
     <string>Recent Projects</string>
    </property>
   </action>
-  <action name="action_Docks_Toolbars">
+  <action name="actionDocksToolbars">
    <property name="text">
     <string>&amp;Docks &amp;&amp; Toolbars</string>
    </property>
@@ -364,7 +364,7 @@
     <string>Statusbar</string>
    </property>
   </action>
-  <action name="actionZoom_In">
+  <action name="actionZoomIn">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
      <normaloff>:/icons/actions/zoom_in.png</normaloff>:/icons/actions/zoom_in.png</iconset>
@@ -373,7 +373,7 @@
     <string>Zoom In</string>
    </property>
   </action>
-  <action name="actionZoom_Out">
+  <action name="actionZoomOut">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
      <normaloff>:/icons/actions/zoom_out.png</normaloff>:/icons/actions/zoom_out.png</iconset>
@@ -382,7 +382,7 @@
     <string>Zoom Out</string>
    </property>
   </action>
-  <action name="actionNormal_size">
+  <action name="actionNormalSize">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
      <normaloff>:/icons/actions/zoom_original.png</normaloff>:/icons/actions/zoom_original.png</iconset>
@@ -471,7 +471,7 @@
     <string>Preferences</string>
    </property>
   </action>
-  <action name="actionPrevious_Tab">
+  <action name="actionPreviousTab">
    <property name="text">
     <string>Previous Tab</string>
    </property>
@@ -479,7 +479,7 @@
     <string>Ctrl+PgUp</string>
    </property>
   </action>
-  <action name="actionNext_Tab">
+  <action name="actionNextTab">
    <property name="text">
     <string>Next Tab</string>
    </property>
@@ -487,7 +487,7 @@
     <string>Ctrl+PgDown</string>
    </property>
   </action>
-  <action name="actionReload_Resources">
+  <action name="actionReloadResources">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
      <normaloff>:/icons/project_management/reload_resources.png</normaloff>:/icons/project_management/reload_resources.png</iconset>
@@ -496,7 +496,7 @@
     <string>Reload Resources</string>
    </property>
   </action>
-  <action name="actionSettings">
+  <action name="actionProjectSettings">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
      <normaloff>:/icons/actions/project_settings.png</normaloff>:/icons/actions/project_settings.png</iconset>
