--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -91,7 +91,7 @@
      <x>0</x>
      <y>0</y>
      <width>813</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -112,6 +112,16 @@
      <addaction name="separator"/>
      <addaction name="actionNewProject"/>
     </widget>
+    <widget class="QMenu" name="menuRecentFiles">
+     <property name="title">
+      <string>Recent Files</string>
+     </property>
+    </widget>
+    <widget class="QMenu" name="menuRecentProjects">
+     <property name="title">
+      <string>Recent Projects</string>
+     </property>
+    </widget>
     <addaction name="menu_New"/>
     <addaction name="actionOpenFile"/>
     <addaction name="actionOpenProject"/>
@@ -124,8 +134,8 @@
     <addaction name="actionSaveAll"/>
     <addaction name="actionSaveProject"/>
     <addaction name="separator"/>
-    <addaction name="actionRecentFiles"/>
-    <addaction name="actionRecentProjects"/>
+    <addaction name="menuRecentFiles"/>
+    <addaction name="menuRecentProjects"/>
     <addaction name="separator"/>
     <addaction name="actionQuit"/>
    </widget>
@@ -165,12 +175,11 @@
     <property name="title">
      <string>&amp;View</string>
     </property>
-    <addaction name="actionDocksToolbars"/>
     <addaction name="actionStatusbar"/>
     <addaction name="separator"/>
     <addaction name="actionZoomIn"/>
     <addaction name="actionZoomOut"/>
-    <addaction name="actionNormalSize"/>
+    <addaction name="actionZoomReset"/>
     <addaction name="separator"/>
     <addaction name="actionFullScreen"/>
    </widget>
@@ -192,14 +201,88 @@
     <addaction name="actionCloseOtherTabs"/>
     <addaction name="actionCloseAllTabs"/>
    </widget>
+   <widget class="QMenu" name="menuEditor">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="title">
+     <string>Editor</string>
+    </property>
+   </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Edit"/>
    <addaction name="menu_View"/>
+   <addaction name="menuEditor"/>
    <addaction name="menuProject"/>
    <addaction name="menuTabs"/>
    <addaction name="menu_Help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBarStandard">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionOpenFile"/>
+   <addaction name="actionOpenProject"/>
+   <addaction name="separator"/>
+   <addaction name="actionSave"/>
+   <addaction name="actionSaveAs"/>
+   <addaction name="actionSaveAll"/>
+   <addaction name="actionSaveProject"/>
+  </widget>
+  <widget class="QToolBar" name="toolBarEdit">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionUndo"/>
+   <addaction name="actionRedo"/>
+   <addaction name="separator"/>
+   <addaction name="actionCut"/>
+   <addaction name="actionCopy"/>
+   <addaction name="actionPaste"/>
+   <addaction name="actionDelete"/>
+  </widget>
+  <widget class="QToolBar" name="toolBarView">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionZoomIn"/>
+   <addaction name="actionZoomOut"/>
+   <addaction name="actionZoomReset"/>
+   <addaction name="separator"/>
+   <addaction name="actionFullScreen"/>
+  </widget>
+  <widget class="QToolBar" name="toolBarProject">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionReloadResources"/>
+   <addaction name="actionProjectSettings"/>
+  </widget>
   <action name="actionAbout">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
@@ -338,21 +421,6 @@
     <string>Save Project</string>
    </property>
   </action>
-  <action name="actionRecentFiles">
-   <property name="text">
-    <string>Recent Files</string>
-   </property>
-  </action>
-  <action name="actionRecentProjects">
-   <property name="text">
-    <string>Recent Projects</string>
-   </property>
-  </action>
-  <action name="actionDocksToolbars">
-   <property name="text">
-    <string>&amp;Docks &amp;&amp; Toolbars</string>
-   </property>
-  </action>
   <action name="actionStatusbar">
    <property name="checkable">
     <bool>true</bool>
@@ -382,13 +450,16 @@
     <string>Zoom Out</string>
    </property>
   </action>
-  <action name="actionNormalSize">
+  <action name="actionZoomReset">
    <property name="icon">
     <iconset resource="../data/Resources.qrc">
      <normaloff>:/icons/actions/zoom_original.png</normaloff>:/icons/actions/zoom_original.png</iconset>
    </property>
    <property name="text">
     <string>Normal Size</string>
+   </property>
+   <property name="toolTip">
+    <string>Reset zoom to the normal size</string>
    </property>
   </action>
   <action name="actionFullScreen">
