--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -220,7 +220,7 @@
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBarStandard">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>Standard toolbar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -238,7 +238,7 @@
   </widget>
   <widget class="QToolBar" name="toolBarEdit">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>Edit toolbar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -256,7 +256,7 @@
   </widget>
   <widget class="QToolBar" name="toolBarView">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>View toolbar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
@@ -272,7 +272,7 @@
   </widget>
   <widget class="QToolBar" name="toolBarProject">
    <property name="windowTitle">
-    <string>toolBar</string>
+    <string>Project toolbar</string>
    </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
