CEED porting: undo/redo core logic

--- a/data/Resources.qrc
+++ b/data/Resources.qrc
@@ -59,5 +59,6 @@
         <file>icons/project_management/create_folder.png</file>
         <file>icons/project_management/remove.png</file>
         <file>icons/project_management/rename.png</file>
+        <file>icons/tabs/has_changes.png</file>
     </qresource>
 </RCC>
