CEED porting: imageset editor dockwidget progress

--- a/ui/imageset/ImagesetEditorDockWidget.ui
+++ b/ui/imageset/ImagesetEditorDockWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>ImagesetEditorDockWidget</class>
- <widget class="QDockWidget" name="DockWidget">
+ <widget class="QDockWidget" name="ImagesetEditorDockWidget">
   <property name="enabled">
    <bool>false</bool>
   </property>
