CEED porting: line+clear button ported, undo for imageset editor prepared

--- a/data/Resources.qrc
+++ b/data/Resources.qrc
@@ -61,5 +61,6 @@
         <file>icons/project_management/rename.png</file>
         <file>icons/tabs/has_changes.png</file>
         <file>icons/imageset_editing/offset_crosshair.png</file>
+        <file>icons/widgets/edit-clear.png</file>
     </qresource>
 </RCC>
