CEED porting: imageset editor actions progress

--- a/ui/imageset/ImagesetEditorDockWidget.ui
+++ b/ui/imageset/ImagesetEditorDockWidget.ui
@@ -211,7 +211,7 @@
             </property>
             <property name="icon">
              <iconset>
-              <normaloff>icons/imageset_editing/filter_reset.png</normaloff>icons/imageset_editing/filter_reset.png</iconset>
+              <normaloff>:/icons/imageset_editing/filter_reset.png</normaloff>:/icons/imageset_editing/filter_reset.png</iconset>
             </property>
             <property name="iconSize">
              <size>
