--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -91,7 +91,7 @@
      <x>0</x>
      <y>0</y>
      <width>813</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -203,7 +203,7 @@
    </widget>
    <widget class="QMenu" name="menuEditor">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="title">
      <string>Ed&amp;itor</string>
