CEED porting: CreateWidgetDockWidget

--- a/ui/layout/CreateWidgetDockWidget.ui
+++ b/ui/layout/CreateWidgetDockWidget.ui
@@ -40,7 +40,7 @@
   <customwidget>
    <class>WidgetTypeTreeWidget</class>
    <extends>QTreeWidget</extends>
-   <header>ceed.editors.layout.visual</header>
+   <header>src/ui/layout/WidgetTypeTreeWidget.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
